fix jdk backward issue